--- a/package.json
+++ b/package.json
@@ -21,14 +21,17 @@
     "axios": "^1.7.9",
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
+    "crypto": "^1.0.1",
     "firebase": "^11.1.0",
     "firebase-admin": "^13.1.0",
     "framer-motion": "^12.4.7",
+    "googleapis": "^148.0.0",
     "jose": "^5.9.6",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.468.0",
     "next": "15.1.1",
     "next-pwa": "^5.6.0",
+    "nodemailer": "^6.10.0",
     "prisma": "^6.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
